<resources>
    <string name="app_name">SFLphone</string>
    <string name="close_msg">Press back again to leave</string>
    <string name="title_section0">Dial</string>
    <string name="title_section1">Call</string>
    <string name="title_section2">History</string>
    <string name="title_activity_sflphone_home">SFLphone</string>
    <string name="create_new_account_dialog_title">No Account Registered</string>
    <string name="create_new_account_dialog">Would you like to register an account now?</string>
        <string name="cannot_pass_sipcall_title">SIP account not available</string>
    <string name="cannot_pass_sipcall">Current selected account is not available</string>
    <string name="ab_account_creation">New account</string>
    <string name="ab_account_edition_1">Delete</string>
    <string name="ab_account_edition_2">Edit</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_category_settings">Settings</string>
    <string name="menu_category_help">Help</string>
    <string name="menu_item_settings_advanced">Manage Accounts</string>
    <string name="menu_item_settings_audio">Audio</string>
    <string name="menu_item_settings_interface">Interface</string>
    <string name="dial_action_call">Call</string>
    <string name="dial_error_no_number_dialed">Dial a number</string>
    <string name="dial_hint">Type phone number</string>
    <string name="hist_replay_button">Replay</string>
    <string name="hist_replay_button_stop">Stop</string>
    <string name="hist_no_history">No history</string>
    <string name="hist_missed_calls">Missed:%1$d</string>
    <string name="hist_in_calls">In:%1$d</string>
    <string name="hist_out_calls">Out:%1$d</string>
    <string name="home_conferences_title">Conferences</string>
    <string name="home_calls_title">Calls</string>
    <string name="home_transfering">Transferring %1$s to %1$s</string>
    <string name="home_transfer_complet">Transfer complete</string>
    <string name="home_conf_item">%1$s participants</string>
    <string name="no_contact_found">No contact found</string>
    <string name="starred_contacts_title">Favorites</string>
    <string name="menu_item_help_gestures">Gestures</string>
    <string name="menu_item_about">About SFLphone</string>
    <string name="transfer_to_another_call">Transfer to another current call:</string>
    <string name="transfer_no_other_call">No other calls pending</string>
    <string name="transfer_type_number">Type number to transfer to:</string>
    <string name="frag_menu_accounts_title">Accounts</string>
    <string name="empty_account_list">No account registered</string>
    <string name="preference_section1">Accounts</string>
    <string name="account_preferences_audio">Audio</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="account_preferences_basic">Account</string>
    <string name="account_preferences_advanced">Advanced Account Preferences</string>
    <string name="account_preferences_srtp">SRTP Account Preferences</string>
    <string name="account_preferences_tls">TLS Account Preferences</string>
    <string name="audio_preferences">Audio Preferences</string>
    <string name="account_hostname_label">Hostname</string>
    <string name="account_username_label">Username</string>
    <string name="account_routeset_label">Route Set</string>
    <string name="account_password_label">Password</string>
    <string name="account_realm_label">Realm</string>
    <string name="account_useragent_label">User Agent</string>
    <string name="account_autoanswer_label">Auto Answer</string>
    <string name="account_type_label">Account Type</string>
    <string name="account_alias_label">Alias</string>
    <string name="account_mailbox_label">Mailbox</string>
    <string name="account_enabled_label">Account Enabled</string>
    <string name="account_registration_exp_label">Registration Expire</string>
    <string name="account_registration_status_label">Registration Status</string>
    <string name="account_registration_code_label">Registration Code</string>
    <string name="account_registration_state_label">Registration State</string>
    <string name="account_credential_count_label">Credential Count</string>
    <string name="account_config_dtmf_type_label">overrtp</string>
    <string name="account_ringtone_path_label">Ringtone</string>
    <string name="account_ringtone_enabled_label">Ringtone Enabled</string>
    <string name="account_keep_alive_label">Keep Alive</string>
    <string name="account_local_interface_label">Local Interface</string>
    <string name="account_published_same_as_local_label">Published Port Same As Local</string>
    <string name="account_local_port_label">Local Port</string>
    <string name="account_published_port_label">Published Port</string>
    <string name="account_published_address_label">Published Address</string>
    <string name="account_displayname_label">Displayname Label</string>
    <string name="account_stun_server_label">Stun Server</string>
    <string name="account_stun_enable_label">Stun Enabled</string>
    <string name="account_srtp_enabled_label">SRTP Enabled</string>
    <string name="account_srtp_exchange_label">SRTP Key Exchange</string>
    <string name="account_encryption_algo_label">Encryption Algo</string>
    <string name="account_srtp_fallback_label">SRTP Fallback</string>
    <string name="account_hello_hash_enable_label">Hello Hash Enabled</string>
    <string name="account_display_sas_label">Display SAS</string>
    <string name="account_not_supported_warning_label">Not Supported Warning</string>
    <string name="account_display_sas_once_label">Display SAS Once</string>
    <string name="account_listener_port_label">TLS Listener Port</string>
    <string name="account_tls_enabled_label">TLS Enabled</string>
    <string name="account_tls_certificate_list_label">TLS Certificate List File</string>
    <string name="account_tls_certificate_file_label">TLS Certificate File</string>
    <string name="account_tls_private_key_file_label">TLS Private Key File</string>
    <string name="account_tls_password_label">TLS Private Key Password</string>
    <string name="account_tls_method_label">TLS Method</string>
    <string name="account_tls_ciphers_label">TLS Ciphers</string>
    <string name="account_tls_server_name_label">TLS Server Name</string>
    <string name="account_tls_verify_label">TLS Verify Server</string>
    <string name="account_tls_verify_client_label">TLS Verify Client</string>
    <string name="account_tls_require_client_certificat_label">TLS Require Client Certificate</string>
    <string name="account_tls_negotiation_timeout_sec">TLS Negotiation Timeout (sec)</string>
    <string name="account_tls_negotiation_timeout_msec">TLS Negotiation Timeout (msec)</string>
    <string name="account_alias_field">Alias</string>
    <string name="title_account_alias_field">Alias</string>
    <string name="dialogtitle_account_alias_field">Enter the alias for this account</string>
    <string name="account_hostname_field">Hostname</string>
    <string name="title_account_hostname_field">Hostname</string>
    <string name="dialogtitle_account_hostname_field">Enter hostname</string>
    <string name="account_username_field">Username</string>
    <string name="title_account_username_field">Username</string>
    <string name="dialogtitle_account_username_field">Enter username</string>
    <string name="account_proxy_field">Proxy</string>
    <string name="title_account_proxy_field">Proxy</string>
    <string name="dialogtitle_account_proxy_field">Enter proxy</string>
    <string name="account_registration_field">Registration Timeout</string>
    <string name="title_account_registration_field">Registration Timeout</string>
    <string name="dialogtitle_account_registration_field">Enter registration timeout</string>
    <string name="account_network_field">Network Interface</string>
    <string name="title_account_network_field">Network Interface</string>
    <string name="dialogtitle_account_network_field">Enter registration timeout</string>
    <string name="account_stun_field">Stun Server</string>
    <string name="title_account_stun_field">Stun Server</string>
    <string name="dialogtitle_account_stun_field">Enter stun server</string>
    <string name="account_security_field">Security</string>
    <string name="title_account_security_field">Security</string>
    <string name="dialogtitle_account_security_field">Activate security feature</string>
    <string name="account_tls_field">TLS</string>
    <string name="title_account_tls_field">TLS</string>
    <string name="dialogtitle_account_tls_field">Activate TLS feature</string>
    <string name="account_srtp_field">SRTP</string>
    <string name="title_account_srtp_field">SRTP</string>
    <string name="dialogtitle_account_srtp_field">Activate SRTP feature</string>
    <string name="title_audio_codec_list">Audio Codec</string>
    <string name="dialogtitle_audio_codec_list">Audio Codec Available</string>
    <string name="title_audio_ringtone_field">Ringtone</string>
    <string name="dialogtitle_audio_ringtone_field">Ringtone</string>
    <string name="me">Me</string>
    <string name="action_call_attended_transfer">Attended Transfer</string>
    <string name="action_call_unattended_transfer">Unattended transfer</string>
    <string name="action_call_general_transfer">Transfer</string>
    <string name="action_call_conference">Conference</string>
    <string name="action_call_hold">Hold</string>
    <string name="action_call_unhold">Unhold</string>
    <string name="action_call_record">Record</string>
    <string name="action_call_stop_record">Stop Recording</string>
    <string name="action_settings">Settings</string>
    <string name="copyright">Copyright \u00A9 2004&#8211;2013 Savoir-Faire Linux Inc.</string>
    <string name="web_site">Website</string>
    <string name="help_gestures"> This view will help users with different interactions during calls. Different actions will be described; Long press, fling, swype etc.</string>
</resources>