<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2004-2025 Savoir-faire Linux Inc.

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.                                 
                                                                    
This program is distributed in the hope that it will be useful,     
but WITHOUT ANY WARRANTY; without even the implied warranty of      
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
GNU General Public License for more details.                        
                                                                    
You should have received a copy of the GNU General Public License   
along with this program. If not, see <https://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:id="@+id/account_status"
        android:key="Account.status"
        android:persistent="false" />

    <PreferenceCategory android:title="@string/account_basic_category" >
        <EditTextPreference
            android:id="@+id/account_alias"
            android:key="Account.alias"
            android:persistent="false"
            android:summary=""
            android:title="@string/account_alias_label" />
        <EditTextPreference
            android:key="Account.hostname"
            android:persistent="false"
            android:summary=""
            android:title="@string/account_hostname_label" />
        <EditTextPreference
            android:key="Account.username"
            android:persistent="false"
            android:summary=""
            android:title="@string/account_username_label" />
        <cx.ring.views.PasswordPreference
            android:key="Account.password"
            android:persistent="false"
            android:summary=""
            android:title="@string/account_password_label" />
        <Preference
            android:key="Account.delete"
            android:persistent="false"
            android:summary=""
            android:title="@string/pref_delete_account_title"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/account_optionnal_category" >
        <EditTextPreference
            android:defaultValue=""
            android:key="Account.routeset"
            android:persistent="false"
            android:title="@string/account_proxy_field" />
        <EditTextPreference
            android:defaultValue=""
            android:key="Account.useragent"
            android:persistent="false"
            android:title="@string/account_useragent_label" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="Account.autoAnswer"
            android:persistent="false"
            android:title="@string/account_autoanswer_label" />
    </PreferenceCategory>

</PreferenceScreen>
