<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2004-2016 Savoir-faire Linux Inc.
                                                                    
Author: Alexandre Lision <alexandre.lision@savoirfairelinux.com>                   
                                                                    
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 3 of the License, or   
(at your option) any later version.                                 
                                                                    
This program is distributed in the hope that it will be useful,     
but WITHOUT ANY WARRANTY; without even the implied warranty of      
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the       
GNU General Public License for more details.                        
                                                                    
You should have received a copy of the GNU General Public License   
along with this program; if not, write to the Free Software         
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.          
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:id="@+id/account_srtp_hello_hash"
        android:defaultValue="disabled"
        android:key="ZRTP.helloHashEnable"
        android:persistent="false"
        android:summaryOff="disabled"
        android:summaryOn="enabled"
        android:title="@string/account_hello_hash_enable_label" />
    <CheckBoxPreference
        android:id="@+id/account_srtp_display_sas"
        android:defaultValue="false"
        android:key="ZRTP.displaySAS"
        android:persistent="false"
        android:summaryOff="disabled"
        android:summaryOn="enabled"
        android:title="@string/account_display_sas_label" />
    <CheckBoxPreference
        android:id="@+id/account_srtp_supported_warning"
        android:defaultValue="false"
        android:key="ZRTP.notSuppWarning"
        android:persistent="false"
        android:summaryOff="disabled"
        android:summaryOn="enabled"
        android:title="@string/account_not_supported_warning_label" />
    <CheckBoxPreference
        android:id="@+id/account_srtp_displaysas_once"
        android:defaultValue="false"
        android:key="ZRTP.displaySasOnce"
        android:persistent="false"
        android:summaryOff="disabled"
        android:summaryOn="enabled"
        android:title="@string/account_display_sas_once_label" />

</PreferenceScreen>