<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2004-2014 Savoir-Faire Linux Inc.                     
                                                                    
Author: Alexandre Lision <alexandre.lision@savoirfairelinux.com>                   
                                                                    
This program is free software; you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation; either version 3 of the License, or   
(at your option) any later version.                                 
                                                                    
This program is distributed in the hope that it will be useful,     
but WITHOUT ANY WARRANTY; without even the implied warranty of      
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the       
GNU General Public License for more details.                        
                                                                    
You should have received a copy of the GNU General Public License   
along with this program; if not, write to the Free Software         
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.          
                                                                    
Additional permission under GNU GPL version 3 section 7:            
                                                                    
If you modify this program, or any covered work, by linking or      
combining it with the OpenSSL project's OpenSSL library (or a       
modified version of that library), containing parts covered by the  
terms of the OpenSSL or SSLeay licenses, Savoir-Faire Linux Inc.    
grants you additional permission to convey the resulting work.      
Corresponding Source for a non-source form of such a combination    
shall include the source code for the parts of OpenSSL used as well 
as that of the covered work.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/org.sflphone" >

        <org.sflphone.views.QuadNumberPickerPreference
            android:id="@+id/account_registration_expire"
            android:key="Account.registrationExpire"
            android:persistent="false"
            android:title="@string/account_registration_exp_label"
            app:defaultValue1="5"
            app:defaultValue2="0"
            app:defaultValue3="6"
            app:defaultValue4="0"
            app:max1="99"
            app:max2="9"
            app:max3="9"
            app:max4="9"
            app:min1="0"
            app:min2="0"
            app:min3="0"
            app:min4="0" />

        <ListPreference
            android:id="@+id/account_local_interface"
            android:key="Account.localInterface"
            android:persistent="false"
            android:title="@string/account_local_interface_label" />

        <org.sflphone.views.QuadNumberPickerPreference
            android:id="@+id/account_local_port"
            android:key="Account.localPort"
            android:persistent="false"
            android:title="@string/account_local_port_label"
            app:defaultValue1="5"
            app:defaultValue2="0"
            app:defaultValue3="6"
            app:defaultValue4="0"
            app:max1="99"
            app:max2="9"
            app:max3="9"
            app:max4="9"
            app:min1="0"
            app:min2="0"
            app:min3="0"
            app:min4="0" />

    <PreferenceCategory
            android:id="@+id/account_stun_category"
            android:title="@string/account_published_address_label" >

        <CheckBoxPreference
            android:id="@+id/account_stun_enable"
            android:key="STUN.enable"
            android:persistent="false"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:title="@string/account_stun_enable_label" />

        <EditTextPreference
            android:id="@+id/account_stun_server"
            android:defaultValue=""
            android:enabled="false"
            android:key="STUN.server"
            android:persistent="false"
            android:summary=""
            android:title="@string/account_stun_server_label" />

        <CheckBoxPreference
            android:id="@+id/account_published_sameas_local"
            android:key="Account.publishedSameAsLocal"
            android:persistent="false"
            android:title="@string/account_published_same_as_local_label" />

        <org.sflphone.views.QuadNumberPickerPreference
            android:id="@+id/account_published_port"
            android:enabled="false"
            android:key="Account.publishedPort"
            android:persistent="false"
            android:title="@string/account_published_port_label"
            app:defaultValue1="5"
            app:defaultValue2="0"
            app:defaultValue3="6"
            app:defaultValue4="0"
            app:max1="99"
            app:max2="9"
            app:max3="9"
            app:max4="9"
            app:min1="0"
            app:min2="0"
            app:min3="0"
            app:min4="0" />

        <EditTextPreference
            android:id="@+id/account_published_address"
            android:enabled="false"
            android:key="Account.publishedAddress"
            android:persistent="false"
            android:title="@string/account_published_address_label" />
    </PreferenceCategory>
    <PreferenceCategory
            android:id="@+id/account_rtp_port_range"
            android:title="@string/account_rtp_port_range" >

        <org.sflphone.views.QuadNumberPickerPreference
                android:id="@+id/account_rtp_min_port"
                android:key="Account.audioPortMin"
                android:persistent="false"
                android:title="@string/account_rtp_min_port"
                app:defaultValue1="5"
                app:defaultValue2="0"
                app:defaultValue3="6"
                app:defaultValue4="0"
                app:max1="65"
                app:max2="9"
                app:max3="9"
                app:max4="9"
                app:min1="1"
                app:min2="0"
                app:min3="0"
                app:min4="0"/>

        <org.sflphone.views.QuadNumberPickerPreference
                android:id="@+id/account_rtp_max_port"
                android:key="Account.audioPortMax"
                android:persistent="false"
                android:title="@string/account_rtp_max_port"
                app:defaultValue1="5"
                app:defaultValue2="0"
                app:defaultValue3="6"
                app:defaultValue4="0"
                app:max1="65"
                app:max2="9"
                app:max3="9"
                app:max4="9"
                app:min1="0"
                app:min2="0"
                app:min3="0"
                app:min4="0" />
    </PreferenceCategory>

</PreferenceScreen>