<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_sfl_coul_rgb" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_generic_selector" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/web_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_name"
                android:gravity="center"
                android:text="@string/web_site"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/licence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/web_site"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/copyright"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>